[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Prehabs/Celestial Objects/CelestialBody.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Scripts/Celestial Objects/Star.gd" type="Script" id=2]
[ext_resource path="res://Better Celestial Bodies/Star/light.png" type="Texture2D" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 1.0

[node name="Star" groups=["LightSource"] instance=ExtResource( 1 )]
modulate = Color( 0.384688, 0.0485703, 0.0253508, 1 )
script = ExtResource( 2 )
mass = 1e+08
radius = 40.0
prevStage = "Planet"
luminocity = 0.19802

[node name="LightSprite" type="Sprite2D" parent="." index="0"]
scale = Vector2( 0.8, 0.8 )
z_index = 2
texture = ExtResource( 3 )

[node name="PointLight2D" type="PointLight2D" parent="." index="1"]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
texture_scale = 0.48

[node name="SuckArea" type="Area2D" parent="." index="2"]
visible = false
scale = Vector2( 120, 120 )
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SuckArea" index="0"]
shape = SubResource( 1 )

[node name="Trajectory" parent="." index="3"]
scale = Vector2( 0.333333, 0.333333 )

[node name="CelestialBodySprite" parent="." index="4"]
scale = Vector2( 1.25, 1.25 )
z_index = 10

[node name="CelestialBodyHitbox" parent="." index="5"]
scale = Vector2( 40, 40 )
collision_layer = 2

[connection signal="area_entered" from="SuckArea" to="." method="_on_SuckArea_area_entered"]
[connection signal="area_exited" from="SuckArea" to="." method="_on_SuckArea_area_exited"]
[connection signal="area_entered" from="CelestialBodyHitbox" to="." method="_on_CelestialBodyHitbox_area_entered"]
